# autodrive

./: 智驾自研-辅助扫图工具设计文档 (2).docx
client/: index.html  main.js  run_client.py  trajectory_service.py
client_desktop/: README.md  app.py  app_backend.py  build_linux.sh  build_macos.sh  build_windows.bat  client_config.example.json  client_config.json  logic.py  maptool_001_20260408.spec  native_map_import.py  run_client.py
docs/: product_design.md
docs/superpowers/plans/: 2026-04-10-scan-fusion-presets.md  2026-04-20-client-desktop-scan-2d-3d-plan.md  2026-04-22-client-desktop-map-save-export-redesign-plan.md
docs/superpowers/specs/: 2026-04-10-slam-export-tooling-design.md  2026-04-20-client-desktop-scan-2d-3d-design.md  2026-04-22-client-desktop-map-save-export-redesign-design.md
map/tool/: README.md
map/tool/client/: index.html  main.js  style.css
map/tool/client_desktop/: README.md  app.py  app2.py  build_linux.sh  build_macos.sh  logic.py  (+1 more)
server/: README.md  requirements.txt  start_map_server.sh
server/app/: config.py  main.py  models.py  ros_bridge.py  stcm_codec.py  ultrasonic_safety.py
tests/: test_client_desktop_app_helpers.py  test_client_desktop_logic.py  test_client_desktop_run_client.py  test_python_slam_export_tool.py  test_server_motion_control.py  test_server_ros_bridge.py  test_server_stcm_codec.py
tools/: slam_export_tool.py
tools/cpp/: CMakeLists.txt
tools/cpp/include/slam_export/: slam_export_tool.hpp
tools/cpp/src/: slam_export_tool.cpp
tools/java/: README.md
tools/python/: README.md  __init__.py  slam_export_tool.py
(+36 files in other folders)
